@@ -9,7 +9,6 @@ import com.renzzle.backend.domain.puzzle.training.domain.*;
 import com.renzzle.backend.domain.user.dao.UserRepository;
 import com.renzzle.backend.domain.user.domain.UserEntity;
 import com.renzzle.backend.global.common.constant.ItemPrice;
-import com.renzzle.backend.global.common.constant.LanguageCode;
 import com.renzzle.backend.global.common.domain.LangCode;
 import com.renzzle.backend.global.common.domain.Status;
 import com.renzzle.backend.global.exception.CustomException;
@@ -31,7 +30,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
@@ -74,7 +72,7 @@ public class TrainingServiceTest {
 
         @DisplayName("createPack : 팩 생성")
         @Test
-        public void testCreatePack() {
+        void testCreatePack() {
             // given
             List<PackTranslationRequest> translationRequests = Arrays.asList(
                     new PackTranslationRequest("KO", "초보용 1", "강상민", "처음 퍼즐을 푸는..."),
@@ -99,7 +97,7 @@ public class TrainingServiceTest {
                             .author(info.author())
                             .description(info.description())
                             .build())
-                    .collect(Collectors.toList());
+                    .toList();
 
             when(packTranslationRepository.saveAll(anyList())).thenReturn(expectedTranslations);
 
@@ -115,8 +113,7 @@ public class TrainingServiceTest {
 
         @DisplayName("updatePack : 팩 수정 (번역/가격/난이도)")
         @Test
-        @SuppressWarnings("unchecked")
-        public void testUpdatePack() {
+        void testUpdatePack() {
             // given
             Long packId = 1L;
             Pack existingPack = Pack.builder()
@@ -174,11 +171,10 @@ public class TrainingServiceTest {
             verify(packTranslationRepository, times(1)).findAllByPack_Id(packId);
             verify(packTranslationRepository, times(1)).deleteAll(existingTranslations);
 
-            ArgumentCaptor<List> translationsCaptor = ArgumentCaptor.forClass(List.class);
+            ArgumentCaptor<List<PackTranslation>> translationsCaptor = ArgumentCaptor.captor();
             verify(packTranslationRepository, times(1)).saveAll(translationsCaptor.capture());
-            List<PackTranslation> savedTranslations = (List<PackTranslation>) translationsCaptor.getValue();
-            assertThat(savedTranslations).hasSize(2);
-            assertThat(savedTranslations).allSatisfy(t -> assertThat(t.getPack().getId()).isEqualTo(packId));
+            List<PackTranslation> savedTranslations = translationsCaptor.getValue();
+            assertThat(savedTranslations).hasSize(2).allSatisfy(t -> assertThat(t.getPack().getId()).isEqualTo(packId));
 
             PackTranslation ko = savedTranslations.stream()
                     .filter(t -> t.getLangCode().getName().equals("KO"))
@@ -199,7 +195,7 @@ public class TrainingServiceTest {
 
         @DisplayName("addTranslation : Pack에 번역을 추가")
         @Test
-        public void testAddTranslation() {
+        void testAddTranslation() {
             // given
             Long packId = 1L;
             Pack pack = Pack.builder()
@@ -226,7 +222,7 @@ public class TrainingServiceTest {
             // when
             trainingService.addTranslation(request);
 
-            // ArgumentCaptor 를 통해 addTranslation 되는 PackTranslation 객체를 가져옴
+            // Capture the PackTranslation object passed to addTranslation via ArgumentCaptor
             ArgumentCaptor<PackTranslation> captor = ArgumentCaptor.forClass(PackTranslation.class);
 
             // then
@@ -242,7 +238,7 @@ public class TrainingServiceTest {
 
         @DisplayName("createTrainingPuzzle: 유효한 요청과 존재하는 Pack을 전달하면 TrainingPuzzle이 정상적으로 생성")
         @Test
-        public void testCreateTrainingPuzzle() {
+        void testCreateTrainingPuzzle() {
             // given
             Long packId = 1L;
             String boardStatus = "a1a2a3a4";
@@ -259,20 +255,20 @@ public class TrainingServiceTest {
 
             when(trainingPuzzleRepository.findTopIndex(packId)).thenReturn(5);
 
-            // Pack 객체 생성 (필요한 필드만 채움)
+            // Create the Pack object (fill in only the required fields)
             Pack pack = Pack.builder()
                     .id(packId)
-                    .puzzleCount(0)    // 초기 puzzleCount 값 (예시)
+                    .puzzleCount(0)    // initial puzzleCount value (example)
                     .price(1000)
                     .difficulty(Difficulty.getDifficulty("LOW"))
                     .build();
             when(packRepository.findById(packId)).thenReturn(Optional.of(pack));
 
-            // increasePuzzleCount 는 void 메소드이므로 doNothing() 처리
+            // increasePuzzleCount is a void method, so handle it with doNothing()
             doNothing().when(packRepository).increasePuzzleCount(packId);
 
-            // 서비스 로직에서는 TrainingPuzzle 엔티티를 빌드한 후 trainingPuzzleRepository.save()를 호출
-            // unsaved Puzzle은 내부에서 구성되며, 최종적으로 id가 할당된 savedPuzzle을 반환하도록 모킹함.
+            // The service logic builds a TrainingPuzzle entity and then calls trainingPuzzleRepository.save()
+            // The unsaved Puzzle is constructed internally; mock it to return the savedPuzzle with an assigned id.
             TrainingPuzzle savedPuzzle = TrainingPuzzle.builder()
                     .id(100L)
                     .pack(pack)
@@ -308,7 +304,7 @@ public class TrainingServiceTest {
 
         @DisplayName("testDeleteTrainingPuzzle: 존재하는 퍼즐 id가 주어지면 퍼즐 삭제 및 인덱스 감소")
         @Test
-        public void testDeleteTrainingPuzzle() {
+        void testDeleteTrainingPuzzle() {
             // given
             Long puzzleId = 1L;
             int trainingIndex = 5;
@@ -355,7 +351,7 @@ public class TrainingServiceTest {
 
         @DisplayName("SolveLessonPuzzle: 주어진 user와 puzzleId에 대해 최초 풀이라면 solvedTrainingPuzzle이 저장")
         @Test
-        public void testSolveLessonPuzzle() {
+        void testSolveLessonPuzzle() {
             // given
             Long puzzleId = 1L;
             Long userId = 100L;
@@ -367,7 +363,7 @@ public class TrainingServiceTest {
                     .nickname("testUser")
                     .deviceId("dummy-device")
                     .lastAccessedAt(Instant.now())
-                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt은 미래 시점으로 설정 (예시)
+                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt set to a future point in time (example)
                     .status(Status.getDefaultStatus())
                     .build();
 
@@ -383,19 +379,19 @@ public class TrainingServiceTest {
                     .pack(pack)
                     .build();
 
-            // 기존에 풀이 기록이 없음을 가정
+            // Assume there is no existing solve record
             when(solvedTrainingPuzzleRepository.findByUserIdAndPuzzleId(user.getId(), puzzleId))
                     .thenReturn(Optional.empty());
 
-            // 퍼즐 조회 성공
+            // Puzzle lookup succeeds
             when(trainingPuzzleRepository.findById(puzzleId))
                     .thenReturn(Optional.of(trainingPuzzle));
 
-            // 사용자 조회 성공 (영속 상태의 엔티티 반환)
+            // User lookup succeeds (returns a managed entity)
             when(userRepository.findById(userId))
                     .thenReturn(Optional.of(user));
 
-            // 저장 결과 더미 설정
+            // Set up a dummy save result
             when(solvedTrainingPuzzleRepository.save(any(SolvedTrainingPuzzle.class)))
                     .thenAnswer(invocation -> invocation.getArgument(0));
 
@@ -411,7 +407,7 @@ public class TrainingServiceTest {
 
         @DisplayName("testSolveLessonPuzzle_AlreadySolved: 이미 풀이한 퍼즐의 경우 solvedAt을 갱신")
         @Test
-        public void testSolveLessonPuzzle_AlreadySolved() {
+        void testSolveLessonPuzzle_AlreadySolved() {
             // given
             Long puzzleId = 1L;
             UserEntity user = UserEntity.builder()
@@ -421,7 +417,7 @@ public class TrainingServiceTest {
                     .nickname("testUser")
                     .deviceId("dummy-device")
                     .lastAccessedAt(fixedNow)
-                    .deletedAt(fixedNow.plus(1, ChronoUnit.DAYS))  // deletedAt은 미래 시점으로 설정 (예시)
+                    .deletedAt(fixedNow.plus(1, ChronoUnit.DAYS))  // deletedAt set to a future point in time (example)
                     .status(Status.getDefaultStatus())
                     .build();
 
@@ -433,7 +429,7 @@ public class TrainingServiceTest {
             SolveTrainingPuzzleResponse response = trainingService.solveTrainingPuzzle(user, puzzleId, true);
 
             // then
-            assertThat(response.reward()).isEqualTo(0);
+            assertThat(response.reward()).isZero();
             verify(existingSolvedPuzzle, times(1)).updateSolvedAtToNow(clock);
             verify(solvedTrainingPuzzleRepository, never()).save(any());
             verify(trainingPuzzleRepository, never()).findById(any());
@@ -441,7 +437,7 @@ public class TrainingServiceTest {
 
         @Test
         @DisplayName("getTrainingPuzzleList : 유효한 Pack ID에 대해 TrainingPuzzle 목록과 solved 여부가 올바르게 조회")
-        public void testGetTrainingPuzzleList() {
+        void testGetTrainingPuzzleList() {
             // given
             Long packId = 1L;
             UserEntity user = UserEntity.builder()
@@ -451,11 +447,11 @@ public class TrainingServiceTest {
                     .nickname("testUser")
                     .deviceId("dummy-device")
                     .lastAccessedAt(Instant.now())
-                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt은 미래 시점으로 설정 (예시)
+                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt set to a future point in time (example)
                     .status(Status.getDefaultStatus())
                     .build();
 
-            // 예시 TrainingPuzzle 생성 (WinColor는 미리 영속화된 것으로 가정하고, 이름만 사용)
+            // Create an example TrainingPuzzle (assume WinColor is already persisted; only use its name)
             WinColor winColor = WinColor.getWinColor("WHITE");
             TrainingPuzzle puzzle = TrainingPuzzle.builder()
                     .id(10L)
@@ -466,7 +462,7 @@ public class TrainingServiceTest {
             List<TrainingPuzzle> puzzles = Collections.singletonList(puzzle);
             when(trainingPuzzleRepository.findByPack_IdOrderByTrainingIndex(packId)).thenReturn(puzzles);
 
-            // solvedTrainingPuzzleRepository.existsByUserAndPuzzle(user, puzzle) 가 false라고 가정
+            // Assume solvedTrainingPuzzleRepository.existsByUserAndPuzzle(user, puzzle) returns false
             when(solvedTrainingPuzzleRepository.existsByUserAndPuzzle(user, puzzle)).thenReturn(false);
 
             // when
@@ -484,7 +480,7 @@ public class TrainingServiceTest {
 
         @Test
         @DisplayName("testGetTrainingPackList: 유효한 요청 시, 올바른 GetPackResponse 리스트 반환")
-        public void testGetTrainingPackList() {
+        void testGetTrainingPackList() {
             // given
             UserEntity user = UserEntity.builder()
                     .id(100L)
@@ -493,13 +489,13 @@ public class TrainingServiceTest {
                     .nickname("testUser")
                     .deviceId("dummy-device")
                     .lastAccessedAt(Instant.now())
-                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt은 미래 시점으로 설정 (예시)
+                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt set to a future point in time (example)
                     .status(Status.getDefaultStatus())
                     .build();
 
-            GetTrainingPackRequest request = new GetTrainingPackRequest(Difficulty.getDifficulty("LOW").getName(), "EN"); // lang 기본값 EN
+            GetTrainingPackRequest request = new GetTrainingPackRequest(Difficulty.getDifficulty("LOW").getName(), "EN"); // default lang EN
 
-            // Pack 생성 (예: ID 1, price 1000, puzzleCount 10)
+            // Create Pack (e.g., ID 1, price 1000, puzzleCount 10)
             Pack pack = Pack.builder()
                     .id(1L)
                     .price(1000)
@@ -509,7 +505,7 @@ public class TrainingServiceTest {
             when(packRepository.findByDifficulty(any(Difficulty.class)))
                     .thenReturn(packs);
 
-            // PackTranslation 생성 (연결된 pack의 ID 1)
+            // Create PackTranslation (linked pack with ID 1)
             PackTranslation translation = PackTranslation.builder()
                     .pack(pack)
                     .langCode(LangCode.getLangCode("EN"))
@@ -518,14 +514,12 @@ public class TrainingServiceTest {
                     .description("Description")
                     .build();
 
-            LangCode langCode = LangCode.getLangCode("EN");
-
             when(packTranslationRepository.findAllByPack_IdInAndLangCode(
                     eq(List.of(1L)),
                     argThat(arg -> arg.getName().equals("EN"))
             )).thenReturn(List.of(translation));
 
-            // userPackRepository: 사용자가 해당 pack에 대한 기록이 없으므로, 빈 리스트 반환 (locked = true, solvedCount = 0)
+            // userPackRepository: the user has no record for this pack, so return an empty list (locked = true, solvedCount = 0)
             when(userPackRepository.findAllByUserIdAndPackIdIn(100L, List.of(1L)))
                     .thenReturn(Collections.emptyList());
 
@@ -540,15 +534,15 @@ public class TrainingServiceTest {
             assertThat(resp.author()).isEqualTo("Author");
             assertThat(resp.description()).isEqualTo("Description");
             assertThat(resp.price()).isEqualTo(1000);
-            assertThat(resp.solvedPuzzleCount()).isEqualTo(0);
+            assertThat(resp.solvedPuzzleCount()).isZero();
             assertThat(resp.locked()).isTrue();
         }
 
         @Test
         @DisplayName("testPurchaseTrainingPack: 충분한 잔액을 가진 사용자가 팩 구매 시, 팩 금액 반환")
-        public void testPurchaseTrainingPack() {
+        void testPurchaseTrainingPack() {
             // given
-            // 사용자 초기 잔액 2000
+            // user's initial balance 2000
             UserEntity user = UserEntity.builder()
                     .id(100L)
                     .email("test@example.com")
@@ -557,7 +551,7 @@ public class TrainingServiceTest {
                     .deviceId("dummy-device")
                     .currency(2000)
                     .lastAccessedAt(Instant.now())
-                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt은 미래 시점으로 설정 (예시)
+                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt set to a future point in time (example)
                     .status(Status.getDefaultStatus())
                     .build();
 
@@ -570,7 +564,7 @@ public class TrainingServiceTest {
 
             when(packRepository.findById(1L)).thenReturn(Optional.of(pack));
 
-            // 어떤 UserEntity가 저장 요청되더라도, 그 UserEntity 객체 자체를 반환하라 라는 의미
+            // Meaning: whatever UserEntity is requested to be saved, return that UserEntity object itself
             when(userRepository.save(any(UserEntity.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
             // when
@@ -585,7 +579,7 @@ public class TrainingServiceTest {
 
         @Test
         @DisplayName("testPurchaseTrainingPuzzleAnswer: 정상 구매 시, 퍼즐 정답과 퍼즐 정답보기 금액 반환")
-        public void testPurchaseTrainingPuzzleAnswer() {
+        void testPurchaseTrainingPuzzleAnswer() {
             // given
             Pack pack = Pack.builder()
                     .id(1L)
@@ -601,7 +595,7 @@ public class TrainingServiceTest {
                     .answer("Correct Answer")
                     .pack(pack)
                     .build();
-            when(trainingPuzzleRepository.findById(eq(puzzleId)))
+            when(trainingPuzzleRepository.findById(puzzleId))
                     .thenReturn(Optional.of(puzzle));
 
             UserEntity user = UserEntity.builder()
@@ -617,10 +611,8 @@ public class TrainingServiceTest {
                     .build();
 
 
-            when(userRepository.findById(eq(user.getId())))
+            when(userRepository.findById(user.getId()))
                     .thenReturn(Optional.of(user));
-
-//            PurchaseTrainingPuzzleAnswerRequest request = new PurchaseTrainingPuzzleAnswerRequest(puzzleId);
 
             // when
             GetTrainingPuzzleAnswerResponse response = trainingService.purchaseTrainingPuzzleAnswer(user, puzzleId);
@@ -636,11 +628,11 @@ public class TrainingServiceTest {
     class Failure {
         @DisplayName("addTranslation : Pack에 이미 해당 언어의 번역이 존재하기에 ALREADY_EXISTING_TRANSLATION 예외 처리")
         @Test
-        public void testAddTranslation_AlreadyExists() {
+        void testAddTranslation_AlreadyExists() {
             // given
             Long packId = 1L;
             Pack pack = Pack.builder().id(packId).build();
-            LangCode langCode = LangCode.getLangCode("EN");
+
             TranslationRequest request = new TranslationRequest(
                     packId,
                     "EN",
@@ -663,7 +655,7 @@ public class TrainingServiceTest {
 
         @DisplayName("addTranslation: Pack이 존재하지 않으면 번역 저장을 시도하지 않고 NO_SUCH_TRAINING_PACK 예외를 던진다")
         @Test
-        public void testAddTranslation_PackNotFound() {
+        void testAddTranslation_PackNotFound() {
             // given
             Long packId = 1L;
             TranslationRequest request = new TranslationRequest(
@@ -685,7 +677,7 @@ public class TrainingServiceTest {
 
         @DisplayName("updatePack: Pack이 존재하지 않으면 번역/팩 저장을 시도하지 않고 NO_SUCH_TRAINING_PACK 예외를 던진다")
         @Test
-        public void testUpdatePack_PackNotFound() {
+        void testUpdatePack_PackNotFound() {
             // given
             Long packId = 1L;
             List<PackTranslationRequest> translationRequests = Collections.singletonList(
@@ -708,7 +700,7 @@ public class TrainingServiceTest {
 
         @DisplayName("Pack이 존재하지 않는 경우 NO_SUCH_TRAINING_PACK 예외처리")
         @Test
-        public void testCreateTrainingPuzzle_PackNotFound() {
+        void testCreateTrainingPuzzle_PackNotFound() {
             // given
             Long packId = 1L;
             String boardStatus = "a1a2a3a4";
@@ -724,7 +716,7 @@ public class TrainingServiceTest {
                     winColorStr
             );
 
-            // Pack이 존재하지 않는 경우
+            // Case where the Pack does not exist
             when(packRepository.findById(packId)).thenReturn(Optional.empty());
 
             // when
@@ -734,13 +726,13 @@ public class TrainingServiceTest {
             // then
             assertEquals(ErrorCode.NO_SUCH_TRAINING_PACK, exception.getErrorCode());
 
-            // Pack이 없으므로 save()가 호출되지 않아야 함
+            // Since there is no Pack, save() should not be called
             verify(trainingPuzzleRepository, never()).save(any(TrainingPuzzle.class));
         }
 
         @DisplayName("DeleteTrainingPuzzle: 존재하지 않는 퍼즐 id가 주어지면 CANNOT_FIND_TRAINING_PUZZLE 예외 처리")
         @Test
-        public void testDeleteTrainingPuzzle_PuzzleNotFound() {
+        void testDeleteTrainingPuzzle_PuzzleNotFound() {
             // given
             Long puzzleId = 1L;
             when(trainingPuzzleRepository.findById(puzzleId)).thenReturn(Optional.empty());
@@ -760,7 +752,7 @@ public class TrainingServiceTest {
 
         @DisplayName("testSolveLessonPuzzle_PuzzleNotFound: 주어진 puzzleId에 해당하는 퍼즐이 없으면 CANNOT_FIND_TRAINING_PUZZLE 예외가 발생")
         @Test
-        public void testSolveLessonPuzzle_PuzzleNotFound() {
+        void testSolveLessonPuzzle_PuzzleNotFound() {
             // given
             Long puzzleId = 1L;
             UserEntity user = UserEntity.builder()
@@ -770,11 +762,11 @@ public class TrainingServiceTest {
                     .nickname("testUser")
                     .deviceId("dummy-device")
                     .lastAccessedAt(Instant.now())
-                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt은 미래 시점으로 설정 (예시)
+                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt set to a future point in time (example)
                     .status(Status.getDefaultStatus())
                     .build();
 
-            // 기존 풀이 기록은 없으나, 퍼즐이 존재하지 않음
+            // No existing solve record, and the puzzle does not exist
             when(solvedTrainingPuzzleRepository.findByUserIdAndPuzzleId(user.getId(), puzzleId))
                     .thenReturn(Optional.empty());
             when(trainingPuzzleRepository.findById(puzzleId))
@@ -796,7 +788,7 @@ public class TrainingServiceTest {
 
         @Test
         @DisplayName("testGetTrainingPuzzleList : 존재하지 않는 Pack ID에 대해 TrainingPuzzle 목록이 없으면 NO_SUCH_TRAINING_PACK 예외를 던진다.")
-        public void testGetTrainingPuzzleList_PackNotFound() {
+        void testGetTrainingPuzzleList_PackNotFound() {
             // given
             Long packId = 1L;
             UserEntity user = UserEntity.builder()
@@ -806,7 +798,7 @@ public class TrainingServiceTest {
                     .nickname("testUser")
                     .deviceId("dummy-device")
                     .lastAccessedAt(Instant.now())
-                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt은 미래 시점으로 설정 (예시)
+                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt set to a future point in time (example)
                     .status(Status.getDefaultStatus())
                     .build();
 
@@ -818,13 +810,13 @@ public class TrainingServiceTest {
             );
             assertThat(exception.getErrorCode()).isEqualTo(ErrorCode.NO_SUCH_TRAINING_PACK);
 
-            // 불필요한 추가 호출이 없음을 확인 (원하는 경우)
+            // Verify there are no unnecessary additional calls (if desired)
             verifyNoMoreInteractions(trainingPuzzleRepository, solvedTrainingPuzzleRepository);
         }
 
         @Test
         @DisplayName("testGetTrainingPackList: Pack 목록이 비어 있으면 NO_SUCH_TRAINING_PACKS 예외 발생")
-        public void testGetTrainingPackList_NoTrainingPack() {
+        void testGetTrainingPackList_NoTrainingPack() {
             // given
             UserEntity user = UserEntity.builder()
                     .id(100L)
@@ -833,7 +825,7 @@ public class TrainingServiceTest {
                     .nickname("testUser")
                     .deviceId("dummy-device")
                     .lastAccessedAt(Instant.now())
-                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt은 미래 시점으로 설정 (예시)
+                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt set to a future point in time (example)
                     .status(Status.getDefaultStatus())
                     .build();
             GetTrainingPackRequest request = new GetTrainingPackRequest("LOW", null);
@@ -850,7 +842,7 @@ public class TrainingServiceTest {
 
         @Test
         @DisplayName("testPurchaseTrainingPack: 잔액이 부족하면 INSUFFICIENT_CURRENCY 예외가 발생한다.")
-        public void testPurchaseTrainingPack_NotEnoughCurrency() {
+        void testPurchaseTrainingPack_NotEnoughCurrency() {
             // given
             UserEntity user = UserEntity.builder()
                     .id(100L)
@@ -860,7 +852,7 @@ public class TrainingServiceTest {
                     .deviceId("dummy-device")
                     .currency(500)
                     .lastAccessedAt(Instant.now())
-                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt은 미래 시점으로 설정 (예시)
+                    .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))  // deletedAt set to a future point in time (example)
                     .status(Status.getDefaultStatus())
                     .build();
 
@@ -885,7 +877,7 @@ public class TrainingServiceTest {
 
         @Test
         @DisplayName("testPurchaseTrainingPuzzleAnswer: 존재하지 않는 퍼즐 ID로 구매 시, CANNOT_FIND_TRAINING_PUZZLE 예외 발생")
-        public void testPurchaseTrainingPuzzleAnswer_CannotPurchasePuzzle() {
+        void testPurchaseTrainingPuzzleAnswer_CannotPurchasePuzzle() {
             // given
             Long puzzleId = 1L;
             UserEntity user = UserEntity.builder()
@@ -899,12 +891,11 @@ public class TrainingServiceTest {
                     .deletedAt(Instant.now().plus(1, ChronoUnit.DAYS))
                     .status(Status.getDefaultStatus())
                     .build();
-//            PurchaseTrainingPuzzleAnswerRequest request = new PurchaseTrainingPuzzleAnswerRequest(puzzleId);
 
-            when(trainingPuzzleRepository.findById(eq(puzzleId)))
+            when(trainingPuzzleRepository.findById(puzzleId))
                     .thenReturn(Optional.empty());
 
-            when(userRepository.findById(eq(user.getId())))
+            when(userRepository.findById(user.getId()))
                     .thenReturn(Optional.of(user));
 
             // when
